exercice en cours

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'defer': true %>
   </head>
-
   <body>
+    <%= render "layouts/navbar" %>
+    <div class="container pt-5">
     <%= yield %>
+    </div>
+    <%= render "layouts/footer" %>
   </body>
 </html>
