--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,31 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+.footer {
+  text-align: center;
+  padding: 30px;
+  background-color: #2c2b2b;
+  background-size: cover;
+}
+
+.footer a {
+  font-size: 30px;
+  color:  #433afc;
+  opacity: 0.7;
+  transition: 0.3s;
+}
+
+.footer a:hover {
+  opacity: 1;
+}
+
+
+.footer p {
+  color: #6B6C6C;
+}
+
+.footer .fas {
+  color: #BF0F12;
+}
