--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,14 +1,12 @@
-<div class="container padded">
-  <h3 class="text-center">Add an ingredient</h1>
-  <div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <%= simple_form_for [@cocktail, @dose] do |f| %>
-      <%= f.input :ingredient, collection: Ingredient.order(:name), prompt: "Pick one from list" %>
-      <%= f.input :description %>
-      <%= f.submit "Submit", class: "btn btn-primary" %>
-      <% end %>
-      <div class="pad20">
-        <%= link_to "Go back", cocktails_path, class: "btn btn-warning btn-sm" %>
+<div class="col mt-4">
+  <h2 class="text-center">Add new cocktail</h2>
+    <div class="row justify-content-center">
+      <div class="col-12 md-8">
+        <%= simple_form_for [@cocktail, @dose] do |f| %>
+          <%= f.association :ingredient,  prompt: "Pick one from list" %>
+          <%= f.input :description %>
+          <%= f.submit "Submit", class: "btn btn-primary" %>
+        <% end %>
       </div>
     </div>
   </div>
