--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -6,6 +6,7 @@
       <div class="col-12 md-8">
         <%= simple_form_for @cocktail do |f| %>
           <%= f.input :name %>
+          <%= f.input :photo, as: :file %>
           <%= f.submit "Submit", class: "btn btn-primary" %>
         <% end %>
       </div>
