--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,6 +2,8 @@
 
   <!-- Heading -->
   <h1 class="text-center"> <%= @cocktail.name %> </h1>
+  <%= cl_image_tag @cocktail.photo.key, height: 200, width: 300, crop: :fill %>
+
 
   <!-- Ingredient heading -->
   <div class="row">
