--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,8 +8,8 @@
     <% @cocktails.each do |cocktail| %>
     <div class="col-xs-12 col-sm-4">
       <%= link_to cocktail_path(cocktail), class: "card-link" do%>
-      <div class="card m-4">
-        <div class="card-body">
+      <div class="card m-4"  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+        <div class="card-category">
           <h2> <%= cocktail.name  %> </h2>
         </div>
       </div>
@@ -24,5 +24,4 @@
   </div>
 <!-- Close main div -->
 </div>
-
 
