--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,18 +1,16 @@
 <div class="container pt-5">
-
-  <!-- Heading -->
-  <h1 class="text-center"> <%= @cocktail.name %> </h1>
-  <%= cl_image_tag @cocktail.photo.key, height: 200, width: 300, crop: :fill %>
-
+  <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+    <h1 class="text-center"> <%= @cocktail.name %> </h1>
+  </div>
 
   <!-- Ingredient heading -->
-  <div class="row">
+  <div class="container">
     <% if @cocktail.doses.empty? %>
-    <p class="text-gray">
+    <p class="text-gray text-center">
       No ingredients yet. Add yours!
     </p>
     <% else %>
-    <h3> Ingredients : </h3>
+    <h3 class="text-center"> List of Ingredients : </h3>
 
       <% end %>
   </div>
@@ -26,7 +24,7 @@
           <%= simple_form_for [@cocktail, @dose] do |f| %>
             <%= f.association :ingredient,  prompt: "Pick one from list" %>
             <%= f.input :description %>
-            <%= f.submit "Submit", class: "btn btn-primary" %>
+            <%= f.submit "Shake Da Mother Fucking Cocktail !", class: "btn btn-primary" %>
           <% end %>
         </div>
       </div>
@@ -34,6 +32,5 @@
   </div>
 
 </div>
-
 
 
