--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,14 @@
-  <div class="footer footer-expand-md footer-dark fixed-bottom bg-dark">
-    <div class="links">
-      <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-fw fa-github"></i></a>
-      <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-      <p>This website was coded with <i class="fas fa-heart"></i> @ Le Wagon by Tooommm.</p>
-    </div>
+<div class="container m-5">
+</div>
+
+
+
+<div class="footer container-fluid flex-grow-0 flex-shrink-1 footer-dark bg-dark">
+  <div class="links">
+    <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-fw fa-github"></i></a>
+    <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
+    <p>This website was coded with <i class="fas fa-heart"></i> @ Le Wagon by Tooommm.</p>
   </div>
+</div>
