--- a/app/views/cocktails/_cards_ingredients.html.erb
+++ b/app/views/cocktails/_cards_ingredients.html.erb
@@ -5,7 +5,7 @@
       <% @cocktail.doses.each do |d| %>
       <div>
     <i class="fa fa-glass"></i> <strong> <%= d.ingredient.name %> </strong>
-    <%= link_to "Delete", dose_path(d), class: "btn btn-danger btn-xs", method: :delete  %>
+    <%= link_to "X", dose_path(d), class: "btn btn-danger btn-xs", method: :delete  %>
     <p class="pad10"><%= d.description %></p>
       </div>
     <% end %>
