--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,3 +39,18 @@
 .footer .fas {
   color: #BF0F12;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Warnes&display=swap');
+
+body {
+    background-color: #48525b;
+    color: #dfe0e4;
+}
+
+h1 {
+    font-size: 80px;
+    text-align: center;
+    font-family: 'Warnes', cursive;
+    color: #fff;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+}
