--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,11 @@
 <div class="container pt-5">
   <!-- Heading -->
-  <h1 class="text-underline text-brand">Your Cocktails Menu:</h1>
-
+  <div class="text-underline text-center ">
+  <h1>
+  Cocktails Menu:
+  </h1>
+  </div>
+  </div>
     <!-- Grid row -->
   <div class="row mb-5 mt-5">
     <!-- Card -->
@@ -9,7 +13,7 @@
     <div class="col-xs-12 col-sm-4">
       <%= link_to cocktail_path(cocktail), class: "card-link" do%>
       <div class="card m-4"  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
-        <div class="card-category">
+        <div class="card-category p-5">
           <h2> <%= cocktail.name  %> </h2>
         </div>
       </div>
