--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,15 +1,13 @@
 <div class="container pt-5">
-  <!-- Heading -->
   <div class="text-underline text-center ">
   <h1>
   Cocktails Menu:
   </h1>
   </div>
   </div>
-    <!-- Grid row -->
   <div class="row mb-5 mt-5">
-    <!-- Card -->
     <% @cocktails.each do |cocktail| %>
+    <% if cocktail.photo.attached? %>
     <div class="col-xs-12 col-sm-4">
       <%= link_to cocktail_path(cocktail), class: "card-link" do%>
       <div class="card m-4"  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
@@ -18,14 +16,13 @@
         </div>
       </div>
       <% end %>
+      <% end %>
     </div>
     <% end %>
   </div>
-
-  <!-- Add button -->
   <div class="row">
     <%= link_to "Add your cocktail", new_cocktail_path, class: "btn btn-primary btn-lg btn-block" %>
   </div>
-<!-- Close main div -->
+
 </div>
 
